--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -126,9 +126,15 @@ jobs:
           : > "$LOG_FILE"
           rm -f "$DONE_FILE" 2>/dev/null || true
 
-          # Preserve original stdout/stderr for concise status, then log everything to file
+          # Preserve original stdout/stderr and stream output into console + log file
           exec 3>&1 4>&2
-          exec >>"$LOG_FILE" 2>&1
+          if command -v tee >/dev/null 2>&1; then
+            exec > >(tee -a "$LOG_FILE" >&3)
+            exec 2> >(tee -a "$LOG_FILE" >&4)
+          else
+            printf '%s\n' "tee command not found; deploy output will update after completion" >&3
+            exec >>"$LOG_FILE" 2>&1
+          fi
 
           ts() { date -Is; }
           say() { printf "%s %s\n" "$(ts)" "$*" >&3; }
@@ -159,6 +165,7 @@ jobs:
           # Ensure logs directory exists in deployment path
           mkdir -p "$DEST_DIR/logs"
           (sudo chown -R "$USER:$USER" "$DEST_DIR/logs" 2>/dev/null || true)
+          touch "$DEST_DIR/logs/eassist-api.log"
 
           section "Prerequisites"
           if command -v sudo >/dev/null 2>&1 && sudo -n true 2>/dev/null; then
@@ -300,8 +307,11 @@ jobs:
             echo "::group::Deploy summary (sections, warnings, errors)"
             grep -E "==== |\[WARN\]|\[ERROR\]" deploy.log || true
             echo "::endgroup::"
-            echo "---- Deploy log tail (last 200 lines) ----"
-            (sed -e 's/[[:cntrl:]]\[[0-9;]*m//g' deploy.log | tail -n 200) || true
+            echo "::group::FULL Deploy log"
+            sed -e 's/[[:cntrl:]]\[[0-9;]*m//g' deploy.log || true
+            echo "::endgroup::"
+          else
+            echo "Deploy log not available"
           fi
           # Fetch app log; if fails, create placeholder
           if scp $SCP_OPTS "$SSH_TARGET:/opt/eassist-api/logs/eassist-api.log" ./app.log; then
@@ -366,7 +376,7 @@ jobs:
       - name: Fail if remote deploy failed
         if: always()
         shell: bash
-        run: |
+        run: |de
           set -euo pipefail
           if [ "${REMOTE_DEPLOY_RC}" != "0" ]; then
             echo "Remote deploy failed with code ${REMOTE_DEPLOY_RC}" >&2
